fixed a bug of the swiper size by wrapping it in a parent that has a min-widht set to 100%

--- a/components/home/main/styles.module.scss
+++ b/components/home/main/styles.module.scss
@@ -26,6 +26,7 @@
     background: #fff;
     border-radius: 10px;
     box-shadow: $shadow-1;
+    min-width: 100%; //that sorted the problem of the width of the swiper
   }
   .offers {
     grid-area: offers;
@@ -41,38 +42,4 @@
     border-radius: 10px;
     box-shadow: $shadow-1;
   }
-}
-
-.mainSwiper {
-  width: 100%;
-  height: 100px;
-  background: blue;
-}
-
-.swiper {
-  width: 100%;
-  height: 100%;
-}
-
-.swiper-slide {
-  text-align: center;
-  font-size: 18px;
-  background: #fff;
-
-  /* Center slide text vertically */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.swiper-slide img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.swiper {
-  margin-left: auto;
-  margin-right: auto;
 }
